Fixed table layout bug

--- a/_sass/modules/_forms.scss
+++ b/_sass/modules/_forms.scss
@@ -94,7 +94,7 @@ input[type=radio] {
   &:checked + label {
     color: #000;
   }
-  &:focus + label {
+  &:focus-visible + label {
     color: $color-brand-primary;
     z-index: 9;
     @extend .focused;
